--- a/craft_sicherungWebsite/templates/projekte/programme/dorfentwicklung.html
+++ b/craft_sicherungWebsite/templates/projekte/programme/dorfentwicklung.html
@@ -27,12 +27,13 @@
   </div>
 
       <nav id="myScrollspy">
-    <ul class="nav nav-pills flex-column">
-         <li class="nav-item">   <a class="nav-link active" href="#start"> <span>Dorfentwicklung</span> </a> </li>
-         <li class="nav-item">   <a class="nav-link" href="#plan"> <span> Fünf-Stufen-Plan </span> </a> </li>
-         <li class="nav-item">   <a class="nav-link" href="#ziel"> <span>Starke Dörfer</span> </a> </li>
-         <li class="nav-item">   <a class="nav-link active" href="#gelingendesLeben"> <span>Gelingendes Leben</span> </a> </li>
-         <li class="nav-item">   <a class="nav-link" href="#indigen"><span>Indigene Gemeinschaften </span> </a> </li>
+    <ul class="nav nav-pills flex-column" id="copy">
+        <p class="uebersicht text-left"> Übersicht der Inhalte: </p>
+         <li class="nav-item">   <a class="nav-link active" href="#start"> <div>Dorfentwicklung</div> </a> </li>
+         <li class="nav-item">   <a class="nav-link" href="#plan"> <div> Fünf-Stufen-Plan </div> </a> </li>
+         <li class="nav-item">   <a class="nav-link" href="#ziel"> <div>Starke Dörfer</div> </a> </li>
+         <li class="nav-item">   <a class="nav-link active" href="#gelingendesLeben"> <div>Gelingendes Leben</div> </a> </li>
+         <li class="nav-item">   <a class="nav-link" href="#indigen"><div>Indigene Gemeinschaften </div> </a> </li>
     </ul>
   </nav>
   </div>
