--- a/craft_sicherungWebsite/templates/spenden/spende.html
+++ b/craft_sicherungWebsite/templates/spenden/spende.html
@@ -219,7 +219,7 @@
           <p id="copy"> Ich/wir ermächtige(n) Chance e.V. Zahlungen von meinem/unserem Konto mittels Lastschrift einzuziehen. Zugleich weise(n) ich/ wir mein/unser Kreditinstitut an,
             die von Chance e.V. auf mein/unser Konto gezogenen Lastschriften einzulösen. </p>
 
-            <div class="row" style="padding-bottom: 2rem;" id="copy">
+            <div class="row" style="padding-bottom: 4rem;" id="copy">
               <div class="col-6"> Kontoinhaber   </div> <div class="col-6">  <span id="inhaberK"></span>  </div>
 
               <div class="col-6"> Straße, Hausnummer   </div> <div class="col-6">  <span id="adresseK"></span>  </div>
@@ -241,11 +241,11 @@
               <div class="col-6"> E-Mail   </div> <div class="col-6">  <span id="emailK"></span>  </div>
             </div>
 
-            <div class="row">
+            <div class="row" style="justify-content: center;">
               <div class="col-4">
                 <button type="button" onclick="bearbeiten()" class="btn btn-primary">Bearbeiten</button>
               </div>
-.              <div class="col-5">
+.              <div class="col-4">
                 <button type="button" onclick="pdfErstellen()" class="btn btn-primary">Ausdrucken</button>
               </div>
               <div class="col-3">
